# iot-labs

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml
data/: air_quality.csv  car_parks.csv  energy_meters.csv  gps.csv  temperature.csv  traffic_lights.csv
docker/: Dockerfile  Dockerfile.agent  Dockerfile.edge  Dockerfile.hub  Dockerfile.sensors_agent  Dockerfile.sensors_edge  Dockerfile.sensors_hub  Dockerfile.store  docker-compose.sensors.yaml  docker-compose.yaml
docker/db/: structure.sql
docker/prometheus/: prometheus.yml
src/: config.py  file_datasource.py  logger.py  main.py
src/agent/: file_datasource.py  main.py
src/api/: app.py  dependencies.py  metrics.py  network_analytics.py  router.py  ws_manager.py
src/core/: config.py  logger.py
src/db/: base.py  orm_models.py
src/domain/: __init__.py  aggregated_data.py  gps.py  temperature_sensor.py
src/edge/: __init__.py  adapters.py  main.py  processor.py
src/hub/: gateway.py  main.py  service.py
src/models/: __init__.py  accelerometer.py  aggregated_data.py  geo_location.py  network_anomaly.py  processed_agent_data.py  sensor_reading.py  sensor_type.py  temperature_sensor.py
src/repository/: processed_agent_data.py  sensor_reading.py
src/sensors_agent/: csv_source.py  main.py
src/sensors_edge/: anomaly_rules.py  main.py
src/sensors_hub/: gateway.py  main.py  service.py
src/store/: main.py
src/synthetic/: generator.py  main.py
src/ui/: app.js  index.html  sensors.css  sensors.js  style.css
tests/: conftest.py  test_file_datasource.py
tests/integration/: test_api.py  test_repository.py  test_sensor_readings_api.py
tests/unit/: test_anomaly_rules.py  test_edge_adapters.py  test_edge_processor.py  test_file_datasource.py  test_hub_service.py  test_models.py  test_multi_sensor_csv_source.py  test_network_analytics.py  test_sensor_readings.py  (+2 more)
tmp_test_datasource/: acc.csv  gps.csv
(+16 files in other folders)
